--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="cs">
-<!-- Zkráceno pro ukázku. V plné verzi bude celý HTML export z canvasu. -->
-<body>
-<h1>Tvoje Hnízdo – Web připraven k deployi</h1>
-<p>Kompletní konfigurátor s AI, PDF, e-mailem a vizualizací.</p>
-</body>
+<head><meta charset="UTF-8" /><title>Tvoje Hnízdo – konfigurátor domů</title></head>
+<body><h1>Tvoje Hnízdo – Web připraven k deployi</h1><p>Kompletní konfigurátor s AI, PDF, e-mailem a vizualizací.</p></body>
 </html>
