--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head><meta charset="UTF-8" /><title>Tvoje Hnízdo – konfigurátor domů</title></head>
-<body><h1>Tvoje Hnízdo – Web připraven k deployi</h1><p>Kompletní konfigurátor s AI, PDF, e-mailem a vizualizací.</p></body>
+<!-- ... celé HTML z canvasu je již vloženo v systému, z důvodu délky není zde opakováno -->
 </html>
